--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Helpers\DebugContext.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\FITSHelper.cs" />
+    <Compile Include="Helpers\FITSHelper2.cs" />
     <Compile Include="Helpers\FITSTimeStampReader.cs" />
     <Compile Include="Helpers\JulianDayHelper.cs" />
     <Compile Include="Helpers\PositionMemento.cs" />
