Squeezed into the 3.6.9 release a detection and correction of the MaxPixelValue AAV issue.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -731,6 +731,7 @@
     </Compile>
     <Compile Include="VideoTools\VideoModelUtils.cs" />
     <Compile Include="Video\AstroDigitalVideoStreamV2.cs" />
+    <Compile Include="Video\AstroDigitalVideo\AavFileHelper.cs" />
     <Compile Include="Video\AstroDigitalVideo\AdvToAviConverter.cs" />
     <Compile Include="Video\AstroDigitalVideo\frmAdv2Viewer.cs">
       <SubType>Form</SubType>
