--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ _ReSharper.*
 Tangra 3.Linux.userprefs
 /Tangra.Video/Linux/lib/libTangraCore.so
 /Issues/Linux
+/OcrTester/AutomatedTestingImages/PixelExport/*.dat
