Added reference to FSharp.Charting

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ Tangra 3.Linux.userprefs
 /Tangra.Video/Linux/lib/libTangraCore.so
 /Issues/Linux
 /OcrTester/AutomatedTestingImages/PixelExport/*.dat
+/packages
