--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -1,38 +1,38 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Tangra.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="Tangra.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
         <Tangra.Properties.Settings>
             <setting name="TangraSettings" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="TangraRecentFiles" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="LastCheckedForUpdates" serializeAs="String">
                 <value>2000-01-01</value>
             </setting>
             <setting name="ApplicationVersion" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="AddinSettings" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="LicenseDialogAcknowledged" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="UsageStatistics" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="UsageStatsLastSent" serializeAs="String">
                 <value>2014-12-01</value>
             </setting>
             <setting name="AtmExtRememberedConfig" serializeAs="String">
-                <value/>
+                <value />
             </setting>
         </Tangra.Properties.Settings>
     </userSettings>
@@ -41,22 +41,26 @@
             <basicHttpBinding>
               <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
                 
-                  <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+                  <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                   <security mode="None">
-                    <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
-                    <message clientCredentialType="UserName" algorithmSuite="Default"/>
+                    <transport clientCredentialType="None" proxyCredentialType="None" realm="" />
+                    <message clientCredentialType="UserName" algorithmSuite="Default" />
                   </security>
                 </binding>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://www.tangra-observatory.org/TangraErrors/ErrorReports.asmx" binding="basicHttpBinding" bindingConfiguration="ServiceSoap" contract="TangraService.ServiceSoap" name="ServiceSoap"/>
+            <endpoint address="http://www.tangra-observatory.org/TangraErrors/ErrorReports.asmx" binding="basicHttpBinding" bindingConfiguration="ServiceSoap" contract="TangraService.ServiceSoap" name="ServiceSoap" />
         </client>
     </system.serviceModel>
     <runtime>
-        <loadFromRemoteSources enabled="true"/>
+        <loadFromRemoteSources enabled="true" />
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-           <probing privatePath="bin;Addins"/>
+           <probing privatePath="bin;Addins" />
+            <dependentAssembly>
+                <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup></configuration>
