WIP: Re-doing (+ Refactoring) the new F# code for OCR

--- a/Tangra.Functional/Tangra.Functional.fsproj
+++ b/Tangra.Functional/Tangra.Functional.fsproj
@@ -37,7 +37,9 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
+    <Compile Include="SubPixelCalc.fs" />
     <Compile Include="OsdFrame.fs" />
+    <Compile Include="OsdLocator.fs" />
     <None Include="GpsBoxSpriteWorkbench.fsx" />
     <None Include="packages.config" />
     <None Include="app.config" />
