--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Config\MPCObsHeader.cs" />
     <Compile Include="Config\MPCObsLine.cs" />
     <Compile Include="Config\OCRConfigEntry.cs" />
+    <Compile Include="Config\ReInterlaceMode.cs" />
     <Compile Include="Config\SerSettings.cs" />
     <Compile Include="Config\StarMapInternalConfig.cs" />
     <Compile Include="Config\TangraConfig.cs" />
