Made the instrumental delays be saved as extensible configurations rather than a fixed Dictionary<int, float>

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Config\frmTangraSettings.Designer.cs">
       <DependentUpon>frmTangraSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Config\InstrumentalDelayConfiguration.cs" />
     <Compile Include="Config\SettingPannels\ucLocation.cs">
       <SubType>UserControl</SubType>
     </Compile>
