--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Addins\SingleMeasurement.cs" />
     <Compile Include="Addins\TangraDrawingSettings.cs" />
     <Compile Include="Addins\TangraHostDelegate.cs" />
+    <Compile Include="Automation\AutomationManager.cs" />
     <Compile Include="Config\frmChooseFirstTimeOcrSettings.cs">
       <SubType>Form</SubType>
     </Compile>
