Split the UI and logic in the integration detection so it can be unit and automation tested.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Controller\AutoUpdatesController.cs" />
     <Compile Include="Controller\ConvertVideoToAavController.cs" />
     <Compile Include="Controller\ConvertVideoToFitsController.cs" />
+    <Compile Include="Controller\IntegrationDetectionController.cs" />
     <Compile Include="Controller\IRequiresAddinsController.cs" />
     <Compile Include="Controller\LightCurveContext.cs" />
     <Compile Include="Controller\LightCurveController.cs" />
