Made it possible to save pixel data from video integration detection into .pixdet format for later re-run of the test.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Addins\TangraHostDelegate.cs" />
     <Compile Include="Automation\AutomatedIntegrationDetection.cs" />
     <Compile Include="Automation\AutomationManager.cs" />
+    <Compile Include="Automation\IntegrationDetection\PixDetFile.cs" />
     <Compile Include="Config\frmChooseFirstTimeOcrSettings.cs">
       <SubType>Form</SubType>
     </Compile>
