Made it possible to plot a subset of the data for AAV Time Analysis

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -1081,6 +1081,12 @@
     <Compile Include="View\CustomRenderers\AavTimeAnalyser\frmAavStatusChannelOnlyView.Designer.cs">
       <DependentUpon>frmAavStatusChannelOnlyView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\CustomRenderers\AavTimeAnalyser\frmChooseSubset.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\CustomRenderers\AavTimeAnalyser\frmChooseSubset.Designer.cs">
+      <DependentUpon>frmChooseSubset.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ImageToolView.cs" />
     <Compile Include="View\VideoFileView.cs" />
     <Compile Include="View\ZoomedImageView.cs" />
@@ -1469,6 +1475,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\CustomRenderers\AavTimeAnalyser\frmAavStatusChannelOnlyView.resx">
       <DependentUpon>frmAavStatusChannelOnlyView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\CustomRenderers\AavTimeAnalyser\frmChooseSubset.resx">
+      <DependentUpon>frmChooseSubset.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
